<resources>
    <string name="app_name">Attendance_Java</string>
    <string name="name">Name</string>
    <string name="emp_no">Emp_No</string>
    <string name="department">Department</string>
    <string name="date_and_time">Date and Time</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>