<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <EditText
        android:id="@+id/Emp_No"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/emp_no"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emp_No" />

    <EditText
        android:id="@+id/Department"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/department"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Datetime"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="45dp"
        android:text="@string/date_and_time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Department" />

    <Button
        android:id="@+id/Markattendance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mark_attendance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Datetime" />


</androidx.constraintlayout.widget.ConstraintLayout>

